codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_list.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Managed worktrees
  Select a worktree to resume, copy its path, or delete it



› Fix login form  updated 2h ago · /repo/worktree

  enter select · esc back
