codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_owner_states.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Managed worktrees
  Select a worktree to resume, copy its path, or delete it



› Fix settings   Archived · updated 1d ago · /repo/archived
  /repo/missing  Owner thread unavailable · /repo/missing
  /repo/empty    No attached thread · /repo/empty

  enter select · esc back
